--- a/src/web/views/partials/navbar.ejs
+++ b/src/web/views/partials/navbar.ejs
@@ -1,46 +1,55 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-<div class="container">
-<a class="navbar-brand" href="/">
-<i class="fas fa-robot me-2"></i> Choco
-</a>
-<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-<span class="navbar-toggler-icon"></span>
-</button>
-<div class="collapse navbar-collapse" id="navbarNav">
-<ul class="navbar-nav me-auto">
-<li class="nav-item">
-<a class="nav-link" href="/">Strona główna</a>
-</li>
-<% if (user) { %>
+    <div class="container">
+    <a class="navbar-brand" href="/">
+    <i class="fas fa-robot me-2"></i> Choco
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+    <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav me-auto">
     <li class="nav-item">
-    <a class="nav-link" href="/dashboard">Panel</a>
+    <a class="nav-link" href="/">Strona główna</a>
     </li>
-    <% } %>
-    </ul>
-    <ul class="navbar-nav">
     <% if (user) { %>
-        <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-bs-toggle="dropdown">
-        <% if (user.avatar) { %>
-            <img src="https://cdn.discordapp.com/avatars/<%= user.id %>/<%= user.avatar %>.png"
-            alt="<%= user.username %>" class="user-avatar me-1">
-            <% } %>
-            <%= user.username %>
-            </a>
-            <ul class="dropdown-menu dropdown-menu-end">
-            <li><a class="dropdown-item" href="/dashboard">Panel</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="/logout">Wyloguj</a></li>
-            </ul>
-            </li>
-            <% } else { %>
-                <li class="nav-item">
-                <a class="nav-link btn btn-outline-light btn-sm ms-2" href="/auth/discord">
-                <i class="fab fa-discord me-1"></i> Zaloguj przez Discord
-                </a>
-                </li>
+        <li class="nav-item">
+        <a class="nav-link" href="/dashboard">Panel</a>
+        </li>
+        <% } %>
+        </ul>
+        <ul class="navbar-nav">
+        <!-- Przełącznik trybu ciemnego -->
+        <li class="nav-item me-2">
+            <div class="form-check form-switch mt-2">
+                <input class="form-check-input" type="checkbox" id="darkModeToggle">
+                <label class="form-check-label text-light" for="darkModeToggle">
+                    <i class="fas fa-moon"></i>
+                </label>
+            </div>
+        </li>
+        <% if (user) { %>
+            <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-bs-toggle="dropdown">
+            <% if (user.avatar) { %>
+                <img src="https://cdn.discordapp.com/avatars/<%= user.id %>/<%= user.avatar %>.png"
+                alt="<%= user.username %>" class="user-avatar me-1">
                 <% } %>
+                <%= user.username %>
+                </a>
+                <ul class="dropdown-menu dropdown-menu-end">
+                <li><a class="dropdown-item" href="/dashboard">Panel</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="/logout">Wyloguj</a></li>
                 </ul>
-                </div>
-                </div>
-                </nav>
+                </li>
+                <% } else { %>
+                    <li class="nav-item">
+                    <a class="nav-link btn btn-outline-light btn-sm ms-2" href="/auth/discord">
+                    <i class="fab fa-discord me-1"></i> Zaloguj przez Discord
+                    </a>
+                    </li>
+                    <% } %>
+                    </ul>
+                    </div>
+                    </div>
+                    </nav>
