--- a/src/web/views/dashboard/reaction-roles.ejs
+++ b/src/web/views/dashboard/reaction-roles.ejs
@@ -183,6 +183,7 @@
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
+  <script src="/js/dark-mode.js"></script>
   <script>
     // Obsługa otwarcia modala dodawania roli
     const addRoleModal = document.getElementById('addRoleModal');
