--- a/src/web/views/dashboard/message-logs.ejs
+++ b/src/web/views/dashboard/message-logs.ejs
@@ -447,6 +447,7 @@
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
+  <script src="/js/dark-mode.js"></script>
   <script>
     // ==================
     // Globalne zmienne
