--- a/src/web/views/dashboard/settings.ejs
+++ b/src/web/views/dashboard/settings.ejs
@@ -101,6 +101,7 @@
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
+  <script src="/js/dark-mode.js"></script>
   <script>
     // Funkcja do zapisywania ustawień
     async function saveSettings(guildId) {
