--- a/src/web/views/index.ejs
+++ b/src/web/views/index.ejs
@@ -1,13 +1,14 @@
-<!DOCTYPE html>
-<html lang="pl">
+<!-- Example of what to add to head section in EJS templates (e.g., in views/index.ejs, etc.) -->
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Discord Reaction Roles Bot</title>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-<link rel="stylesheet" href="/css/style.css">
-</head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Discord Reaction Roles Bot</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <!-- Add dark mode stylesheet -->
+    <link rel="stylesheet" href="/css/dark-mode.css">
+  </head>
 <body>
 <%- include('partials/navbar') %>
 
