--- a/src/web/views/partials/navbar.ejs
+++ b/src/web/views/partials/navbar.ejs
@@ -23,7 +23,7 @@
             <div class="form-check form-switch mt-2">
                 <input class="form-check-input" type="checkbox" id="darkModeToggle">
                 <label class="form-check-label text-light" for="darkModeToggle">
-                    <i class="fas fa-moon"></i>
+                    <i class="fas fa-moon" id="darkModeIcon"></i>
                 </label>
             </div>
         </li>
